[SPv2] Disable CompositingRecorder collapsing for SPv2

CompositingRecorder collapses its begin/end display items if there is only
one drawing display item in between. This won't work if the display item
may be layerized and the compositing operation is backdrop-dependent.

For example:

<drawing content="X"/>
<composite blend=multiply>
  <drawing content="Y"/>
</composite>

Will be collapsed as:

<drawing content="X"/>
<drawing content="saveLayer(blend=multiply); Y; restore();"/>

However the result will be incorrect if the second drawing display item gets
layerized.

This CL disables this optimization in SPv2.

BUG=674805,675805
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2580143003
Cr-Commit-Position: refs/heads/master@{#439887}

Former-commit-id: 89df64fbe6300c209e5a3f7e2f7a30a51be8b706